add ffmpeg source just for read

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,8 @@ add_executable(save_files ext/01RtspSource-SaveFile.cpp)
 add_executable(transcode ext/02StreamSource-Transcode.cpp)
 add_executable(pcmtoaac ext/03PcmToAac.cpp)
 add_executable(video_cat ext/04VideoCat.cpp)
+add_executable(video_get_picture ext/05VideoGetPicture.cpp)
+add_executable(ffmepg examples/ffmpeg_read/ffmpeg.c)
 
 set(SOURCE_FILES
         cmdutils.c,
@@ -67,6 +69,9 @@ set(SOURCE_FILES
         ext/02StreamSource-Transcode.cpp
         ext/03PcmToAac.cpp
         ext/04VideoCat.cpp
+        ext/05VideoGetPicture.cpp
+        examples/ffmpeg_read/ffmpeg.c
+        examples/ffmpeg_read/ffmpeg.h
         )
 
 
@@ -99,5 +104,14 @@ target_link_libraries(
 )
 target_link_libraries(
         video_cat
+        ${FFMPEG_ENV}
+)
+target_link_libraries(
+        video_get_picture
+        ${FFMPEG_ENV}
+)
+
+target_link_libraries(
+        ffmepg
         ${FFMPEG_ENV}
 )
