视频截图，但是不知道为啥不能用

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,8 +57,9 @@ add_executable(save_files ext/01RtspSource-SaveFile.cpp)
 add_executable(transcode ext/02StreamSource-Transcode.cpp)
 add_executable(pcmtoaac ext/03PcmToAac.cpp)
 add_executable(video_cat ext/04VideoCat.cpp)
-add_executable(video_get_picture ext/05VideoGetPicture.cpp)
+add_executable(video_get_picture ext/05VideoGetPicture.cpp ext/05VideoGetPicture.cpp)
 add_executable(ffmepg examples/ffmpeg_read/ffmpeg.c)
+add_executable(video_picture examples/yyy.cpp)
 
 set(SOURCE_FILES
         cmdutils.c,
@@ -72,6 +73,7 @@ set(SOURCE_FILES
         ext/05VideoGetPicture.cpp
         examples/ffmpeg_read/ffmpeg.c
         examples/ffmpeg_read/ffmpeg.h
+        examples/yyy.cpp
         )
 
 
@@ -113,5 +115,9 @@ target_link_libraries(
 
 target_link_libraries(
         ffmepg
+        ${FFMPEG_ENV}
+)
+target_link_libraries(
+        video_picture
         ${FFMPEG_ENV}
 )
